# nba-draft-value-analysis

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
data/processed/: analysis_dataset.csv  master_dataset.csv  regression_results.csv  regression_results_bin_interaction.csv  regression_results_bin_interaction_fullcareer.csv  regression_results_check1_nseasons.csv  regression_results_player_level.csv  regression_results_quantile.csv  sensitivity_breakpoints.csv  summary_stats.csv
data/raw/: bbref_advanced_stats.csv  draft_history.csv  salaries.csv
paper/: draft.md  draft.tex  references.md
scripts/: 01_collect_draft_and_stats.py  02_collect_advanced_stats.py  03_collect_salaries.py  04_merge_and_clean.py  05_analysis_and_regression.py
