[project]
name = "nba-draft-value-analysis"
version = "0.1.0"
description = "NBA draft pick valuation: asset mispricing and the analytics revolution"
requires-python = ">=3.13"
dependencies = [
    "nba-api>=1.4.1",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "statsmodels>=0.14.2",
    "scipy>=1.13.1",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "lxml>=5.2.2",
    "tqdm>=4.66.4",
    "basketball-reference-web-scraper>=4.15.4",
    "playwright>=1.60.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
